# gitpic-cli

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.en.md  README.md  SKILL.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  error.rs  github.rs  history.rs  imageproc.rs  link.rs  main.rs  naming.rs  output.rs
src/commands/: completion.rs  config_cmd.rs  doctor.rs  init.rs  list.rs  mod.rs  upload.rs
