[package]
name = "gitpic"
version = "0.1.1"
edition = "2021"
description = "Upload local/clipboard images to a GitHub repo (image host) and get a Markdown link"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tarnish233/gitpic-cli"
homepage = "https://github.com/tarnish233/gitpic-cli"
documentation = "https://github.com/tarnish233/gitpic-cli"
authors = ["tarnish233"]
keywords = ["github", "image", "upload", "markdown", "cli"]
categories = ["command-line-utilities"]
exclude = [".github/", "target/"]

[[bin]]
name = "gitpic"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-std"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
sha2 = "0.10"
base64 = "0.22"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
owo-colors = "4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
